add batch_size in _compute_embs

--- a/CFE1.0/src/code_feature_worker.ipynb
+++ b/CFE1.0/src/code_feature_worker.ipynb
@@ -216,20 +216,22 @@
     "\n",
     "#         return repo_embs\n",
     "    \n",
-    "    def _compute_embs(self, repo_codes):\n",
+    "    def _compute_embs(self, repo_codes, batch_size = 32):\n",
     "        repo_embs = []\n",
     "        for repo in repo_codes:\n",
     "            keys, values = list(repo.keys()), list(repo.values())\n",
-    "            if (len(values) == 0 or len(values) > 2000):\n",
+    "            repo_size = len(values)\n",
+    "            if (repo_size == 0 or repo_size > 2000):\n",
     "                repo_embs.append(0)\n",
     "                continue\n",
     "            # compute code emb from files\n",
     "            tokens = self.tokenizer(values, return_tensors=\"pt\", truncation=True, padding='max_length').to(self.device)\n",
     "            \n",
     "            code_embs = []\n",
-    "            for i in range(tokens['input_ids'].size(0)):\n",
-    "                code_embs.append(self.code_model(input_ids = tokens['input_ids'][i : i + 1],\n",
-    "                                                 attention_mask = tokens['attention_mask'][i : i + 1])['pooler_output'])\n",
+    "            for i in range(0, repo_size, batch_size):\n",
+    "                end_index = min(repo_size, i + batch_size)\n",
+    "                code_embs.append(self.code_model(input_ids = tokens['input_ids'][i : end_index],\n",
+    "                                                 attention_mask = tokens['attention_mask'][i : end_index])['pooler_output'])\n",
     "            code_embs = [torch.cat(code_embs, dim = 0)]\n",
     "            \n",
     "            # aggregate embs of all files to obtain repo emb\n",
